syntax = "proto3";
option go_package = ".;proto";

//用户列表请求用户
message RequestUser{
  uint32 page = 1; // 分页起始页
  uint32 size = 2; // 分页结束页
}

// 返回用户信息
message ResponseUser{
  int32 id = 1;
  string username = 2;
  string mobile = 3;
  string gender = 4;
  uint64 birthDay = 5;
  uint32 role = 6;
  uint64 createdAt = 7;
  uint64 updatedAt = 8;
  uint64 deletedAt = 9;
  bool  isDeleted = 10;
}

// 通过id查询用户
message IdRequest{
  int32 id = 1;
}

// 通过id查询用户
message MobileRequest{
  string mobile = 1;
}

// 创建用户
message CreateRequest{
  string mobile = 1;
  string password = 2;
  string username = 3;
}

// 更新用户
message UpdateRequest{
  int32 id = 1;
  string username = 2;
  string mobile = 3;
  string gender = 4;
  uint64 birthDay = 5;
  uint32 role = 6;
}

// 更新用户
message UpdateResponse{
  bool updated = 1;
}

// 返回用户列表
message ResponseUserList{
  int32  total = 1; // 总数
  repeated ResponseUser user = 2;
}

service User{
  // 通过id查询用户
  rpc GetUserById(IdRequest) returns(ResponseUser);
  // 通过mobile查询用户
  rpc GetUserByMobile(MobileRequest) returns(ResponseUser);
  // 创建用户
  rpc CreateUser(CreateRequest) returns(ResponseUser);
  // 更新用户
  rpc UpdateUser(UpdateRequest) returns(UpdateResponse);
  // 获取用户列表
  rpc GetUserList(RequestUser) returns(ResponseUserList);
}